# resinker

./: .gitignore  Quick_Start.md  README.md  System_Overview.md  pyproject.toml
.github/: PUBLISHING_SETUP.md
.github/workflows/: python-publish.yml
examples/: README.md  ecommerce_events.yaml  sample_events.yaml  trading_platform.yaml
examples/mysas/: events_main.yaml  onboarding_events.yaml  schemas.yaml  trading_events.yaml
output/: ecommerce_events.json
resinker/: __main__.py  cli.py
resinker/config/: loader.py
resinker/core/: orchestrator.py  state_manager.py
resinker/generators/: generators.py  providers.py
resinker/outputs/: file.py  kafka.py  stdout.py
