[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resinker"
version = "0.1.0"
description = "A YAML-based configuration system for mocking event streams"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "faker>=8.0.0",
    "python-dateutil>=2.8.2",
    "kafka-python>=2.0.2",
    "uuid>=1.30",
]

[project.scripts]
resinker = "resinker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["resinker"]

[tool.uv]
repositories = ["pypi"]
